Modifications have been made so that the page displays correctly on mobile devices.

--- a/css/styles.css
+++ b/css/styles.css
@@ -311,7 +311,6 @@
 /* ============================== MEDIA QUERIES ================================*/
 @media (max-width: 980px) {
     .second-section{
-        border: 1px solid blue;
         width: 800px;
     }  
 
@@ -376,6 +375,103 @@
 
 @media (max-width: 610px) {
     .second-section{
-        width: 490px;
+        width: 470px;
+        padding: 0;
+    }
+
+    .third-section{
+        width: 380px;
+    }
+    .ts-list{
+        flex-wrap: wrap;
+    }
+
+    .fourth-section{
+        width: 500px;
+    }
+    .fhs-item{
+        width: 430px;
+    }
+    .item-text{
+        padding-left: 25px;
+        width: 390px;
+    }
+
+    .sixth-section{
+        width: 470px;
+    }
+}
+
+@media (max-width: 520px) {
+    .first-section{
+        flex-direction: column;
+    }
+    .fs-img-div{
+        width: 400px;
+    }
+    .fs-img{
+        width: 170px;
+        height: 170px;
+        margin: 0 auto;
+    }
+    .fs-info{
+        width: 400px;
+    }
+    .fs-title,
+    .fs-subtitle,
+    .fs-info p{
+        text-align: center;
+    }
+    .fs-contact{
+        justify-content: center;
+    }
+
+    .second-section{
+        width: 375px;
+    }
+
+    .third-section{
+        width: 300px;
+    }
+
+    .fourth-section{
+        width: 400px;
+        padding: 0;
+    }
+    .fhs-item{
+        width: 400px;
+    }
+    .item-text{
+        width: 325px;
+        padding-left: 10px;
+    }
+
+    .fifth-section{
+        width: 400px;
+    }
+    .ffs-item{
+        width: 360px;
+    }
+
+    .sixth-section{
+        width: 370px;
+    }
+}
+
+@media (max-width: 415px) {
+    .fourth-section{
+        width: 350px;
+        padding: 0;
+    }
+    .fhs-item{
+        width: 350px;
+    }
+    .item-text{
+        width: 310px;
+        padding-left: 5px;
+    }
+
+    .sixth-section{
+        width: 350px;
     }
 }
